--- a/HigherLowerapp/app/src/main/res/layout/content_dice_roll.xml
+++ b/HigherLowerapp/app/src/main/res/layout/content_dice_roll.xml
@@ -9,33 +9,12 @@
     tools:showIn="@layout/activity_dice_roll">
 
     <EditText
-        android:id="@+id/Score"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-
-        android:layout_marginEnd="153dp"
-        android:layout_marginStart="16dp"
-        android:clickable="false"
-        android:cursorVisible="false"
-        android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:inputType="none"
-        android:text="Score: 0"
-        app:layout_constraintBottom_toTopOf="@+id/rollHistory"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/highScore" />
-
-    <EditText
         android:id="@+id/highScore"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="153dp"
-        android:layout_marginStart="16dp"
-
-        android:layout_marginTop="16dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="152dp"
+        android:layout_marginStart="7dp"
         android:clickable="false"
         android:cursorVisible="false"
         android:ems="10"
@@ -48,66 +27,87 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/Dice"
-        android:layout_width="117dp"
-        android:layout_height="118dp"
-        android:layout_marginBottom="84dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-
-        app:layout_constraintEnd_toStartOf="@+id/bHigher"
-        app:layout_constraintStart_toEndOf="@+id/bLower"
-        app:layout_constraintTop_toBottomOf="@+id/rollHistory"
-        app:srcCompat="@drawable/zes" />
-
-    <Button
-        android:id="@+id/bHigher"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="116dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="70dp"
-        android:background="@android:color/holo_red_dark"
-        android:text="Higher"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
+    <EditText
+        android:id="@+id/Score"
+        android:layout_width="227dp"
+        android:layout_height="66dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginStart="7dp"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:inputType="none"
+        android:text="Score: 0"
+        app:layout_constraintBottom_toTopOf="@id/rollHistory"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toEndOf="@+id/Dice"
-        app:layout_constraintTop_toBottomOf="@+id/rollHistory" />
-
-    <Button
-        android:id="@+id/bLower"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="116dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
-        android:background="@android:color/holo_green_light"
-        android:text="Lower"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toStartOf="@+id/Dice"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rollHistory" />
+        app:layout_constraintTop_toBottomOf="@+id/highScore" />
 
     <ListView
         android:id="@+id/rollHistory"
         android:layout_width="0dp"
-        android:layout_height="209dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginStart="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/Dice"
+        android:layout_height="134dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@id/action_section"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Score" />
 
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/action_section"
+        android:layout_width="321dp"
+        android:layout_height="191dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintTop_toBottomOf="@id/rollHistory"
+        tools:layout_editor_absoluteX="16dp">
+
+        <Button
+            android:id="@+id/bLower"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_marginBottom="63dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="28dp"
+            android:background="@android:color/holo_green_light"
+            android:text="Lower"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toStartOf="@+id/Dice"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rollHistory" />
+
+        <ImageView
+            android:id="@+id/Dice"
+            android:layout_width="69dp"
+            android:layout_height="69dp"
+
+            app:srcCompat="@drawable/zes"
+            tools:layout_editor_absoluteX="126dp"
+            tools:layout_editor_absoluteY="61dp" />
+
+        <Button
+            android:id="@+id/bHigher"
+            android:layout_width="76dp"
+            android:layout_height="76dp"
+            android:layout_marginBottom="63dp"
+
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="28dp"
+            android:background="@android:color/holo_red_dark"
+            android:text="Higher"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/Dice"
+            app:layout_constraintTop_toBottomOf="@+id/rollHistory" />
+
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
