--- a/StudentPortaal/app/src/main/res/layout/activity_web_view.xml
+++ b/StudentPortaal/app/src/main/res/layout/activity_web_view.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GeoGuess">
+    tools:context=".webView">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-
+    <WebView
+        android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"></WebView>
+
 </android.support.constraint.ConstraintLayout>
