--- a/StudentPortaal/app/src/main/res/layout/portals_screen.xml
+++ b/StudentPortaal/app/src/main/res/layout/portals_screen.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".GeoGuess">
+    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-
+    <TextView
+        android:id="@+id/urlTitle"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:textColor="@color/black" />
 </android.support.constraint.ConstraintLayout>
